--- a/css/app.css
+++ b/css/app.css
@@ -1,6 +1,6 @@
 body {
-	color: rgb(0,033,255);
-	background-color: lightgrey;
+	color: rgb(246,255,67);
+	background-color:#618d96 ;
 	font-family: "Apple Garamond", "Arial", "Ubuntu";
 	font-size: 18px;
 }
