--- a/css/studies.css
+++ b/css/studies.css
@@ -1,9 +1,11 @@
 
 table {
 	border: 1px solid #000 ;
+	border-collapse: collapse;
 }
 td,th {
 
 	border: 1px solid currentColor;
 	padding: 10px 15px 10px 15px;
+	
 }
