--- a/css/studies.css
+++ b/css/studies.css
@@ -1,11 +1,21 @@
 
 table {
-	border: 1px solid #000 ;
+	border: 2px solid #000 ;
 	border-collapse: collapse;
 }
 td,th {
 
-	border: 1px solid currentColor;
+	border: 1px solid black;
+	border-collapse: collapse;
 	padding: 10px 15px 10px 15px;
 	
+}
+th {
+	color: #000000;
+	background-color: white;
+}
+
+td {
+	color: yellow;
+	background-color:#618d96 ;
 }
