Update for Thursday

--- a/css/app.css
+++ b/css/app.css
@@ -10,3 +10,14 @@ p {
 img {
 	border-radius: 5%
 }
+a {
+	text-decoration: none;
+	color: black;
+}
+a:visited {
+	text-decoration: underline;
+	color: inherit;
+}
+a:hover {
+	color: red;
+}
