New update Thursday

--- a/css/app.css
+++ b/css/app.css
@@ -1,6 +1,7 @@
 body {
-	color: rgb(246,255,67);
-	background-color:#618d96 ;
+	color: #d97b1a;
+	background-color:#688080  ;
+
 	font-family: "Apple Garamond", "Arial", "Ubuntu";
 	font-size: 18px;
 }
