--- a/css/index.css
+++ b/css/index.css
@@ -18,14 +18,43 @@ background-color: white;
 }
 
 #charlice-puth{
-background-color: #607b1a;
+background-color: #928e87;
 }
 #napoleon-bonaparte{
-background-color: #607b4a
+background-color: #607b4a;
 }
 
 div.people {
 	border-bottom: 6px solid currentColor;
-	padding: 15px;
-	margin: 15px;
+	padding: 15px 15px 20px 19px;
+	margin: 15px 0px 15px 0px;
+	overflow: auto;
+}
+audio {
+	width: 100%;
+}
+video {
+	width: 75%;
+	height: 35%;
+}
+div.name{
+	width: 25%;
+	float: left;
+	padding-right: 9px;
+}
+div.biography {
+	width: 70%;
+	float: left;
+	padding-left: 9px;
+}
+
+@media screen and (min-width: 450px) {
+	figure {
+		width: 77px;
+	}
+}
+@media screen and (min-width:600px) {
+	figure {
+		width:120px;
+	}
 }
