--- a/css/app.css
+++ b/css/app.css
@@ -14,6 +14,7 @@ img {
 a {
 	text-decoration: none;
 	color: black;
+
 }
 a:visited {
 	text-decoration: underline;
@@ -44,5 +45,15 @@ img {
 @media screen and (min-width:600px) {
 	figure {
 		width:120px;
+	}
+}
+@media screen and (min-width:900px) {
+	figure {
+		width:280px;
+	}
+}
+@media screen and (min-width:1080px) {
+	figure {
+		width:390px;
 	}
 }
